--- a/client/client/package.json
+++ b/client/client/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.6.1",
     "react-google-login": "^5.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.0",
+    "react-scripts": "3.0.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
