--- a/client/client/package.json
+++ b/client/client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "http-proxy-middleware": "^0.19.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-google-login": "^5.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^3.0.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
@@ -16,7 +17,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://18.188.32.120:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
