--- a/client/client/package.json
+++ b/client/client/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "http-proxy-middleware": "^0.19.1",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
-    "react-google-login": "^5.0.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "3.0.0",
-    "styled-components": "^4.1.3"
+    "http-proxy-middleware": "^0.20.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-google-login": "^5.0.7",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
